registration-view.jsx: -fixed registration form -added 'submit' button login-view.jsx: -added 'register' button with functionality login-view.scss: -improved button layout -labels got white font for better readability index.scss: -added 'white' color variable myFlix-client: -added files and folders for new components

--- a/src/components/login-view/login-view.scss
+++ b/src/components/login-view/login-view.scss
@@ -1,3 +1,17 @@
+@use '../../index.scss';
+
+* {
+  color: index.$white;
+}
+
 .login-view-container {
   height: 100vh;
+}
+
+.register-label {
+  padding-top: 15px;
+}
+
+.login-view-button {
+  width: 80px;
 }
