--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@ $light-green: #36b06f;
 $dark-green: #1e392a;
 $light: #e9c893;
 $gray: #828081;
+$white: white;
 
 * {
   font-family: 'montserrat';
